feat: Role, employees dtos, EmployeeMapper and related changes in DataSeeder.